# CSTeamAutomationByRAG

./: .env.example  .gitignore  COMPLETE_PROJECT_DOCUMENTATION.md  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  pyproject.toml
__queuestorage__/: AzuriteConfig
data/raw/: example.md
docs/: INTERVIEW_GUIDE.md
src/rag_project/: __main__.py  cli.py  hf_inference.py  ingest.py  loaders.py  rag.py  settings.py
src/rag_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/rag_project/data/chroma/: chroma.sqlite3
